// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content component Should have content classname 1`] = `
<div
  className="content"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Content component Should have content classname with normal size 1`] = `
<div
  className="content is-normal"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;
